Changed css style file to correct text alignments

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@ body {
     height: 100vh;
     background: darkslategray;
     display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -21,7 +22,6 @@ header {
 
 main {
     color: whitesmoke;
-    width: 90%;
     margin: auto;
     display: flex;
     align-items: center;
